...
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/content_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
             />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_left"
            android:layout_marginTop="@dimen/text_margin_top_smaller"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/subText_margin"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:fontFamily="serif"
            android:textColor="#989898"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
             />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_photos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="@dimen/text_margin_left"
            android:layout_marginTop="@dimen/subText_margin"
            android:scrollbars="horizontal"
            android:fadeScrollbars="false"
            app:layout_constraintEnd_toStartOf="@+id/iv_expand"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_address" />

        <ImageView
            android:id="@+id/iv_expand"
...
            android:layout_marginEnd="8dp"
            android:layout_marginTop="@dimen/subText_margin"
            app:layout_constraintEnd_toStartOf="@+id/iv_expand"
            app:layout_constraintStart_toStartOf="@+id/rv_photos"
            app:layout_constraintTop_toBottomOf="@+id/rv_photos">
        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            />
        </FrameLayout>

        <Button
            android:id="@+id/btn_contact"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_button_margin_bottom"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_contact"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_share"
            app:layout_constraintTop_toBottomOf="@+id/fl_summary" />

        <Button
            android:id="@+id/btn_share"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
...
