...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_create"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="fab"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="@dimen/fab_margin"
        app:srcCompat="@drawable/add_icon"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/vp_main"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:theme="?attr/actionBarTheme"
            android:clipChildren="false"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/logo"
                android:scaleType="centerCrop"
                android:contentDescription="@string/logo"
                />

            <com.me.cl.capstoneproject.widget.CustomSpinner
                android:id="@+id/sp_title"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_marginStart="20dp"
                android:transitionName="district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownSelector="?attr/selectableItemBackground"
...
                android:popupBackground="@drawable/shape_rectangle_round"
                ></com.me.cl.capstoneproject.widget.CustomSpinner>

        </android.support.v7.widget.Toolbar>

        <com.me.cl.capstoneproject.widget.CustomTabLayout
            android:id="@+id/tl_main"
            style="@style/Widget.Design.TabLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabLayout_height"
            android:alwaysDrawnWithCache="false"
            android:animationCache="false"
            android:background="@color/colorPrimary"
...

    </LinearLayout>



    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/google_ad_unit_id_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
