<resources>
    <string name="app_name">CNSY</string>
    <string name="tab_main_left">Commercial</string>
    <string name="tab_main_center">Free</string>
    <string name="tab_main_right">Help</string>
    <string name="button_contact">Contact</string>
    <string name="button_share">Share</string>
    <string name="search_menu_title">search</string>

    <string name="google_ad_unit_id">ca-app-pub-2798940618739500/4756331105</string>
    <string name="google_ad_unit_id_main">ca-app-pub-2798940618739500/5498061232</string>
    <string name="google_ad_unit_id_detail">ca-app-pub-2798940618739500/8779309622</string>
...
    <string name="logo">logo</string>
    <string name="add_new_photo">add new photo</string>
    <string name="album">album</string>
    <string name="expand_all">expand all</string>
    <string name="photo">photo</string>
    <string name="arrow">arrow</string>
    <string name="monetary_unit">$</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="cancel">cancel</string>
    <string name="review">Review</string>
    <string name="reviews">Reviews</string>
    <string name="sort">Sort</string>
    <string name="transition_vp_background">vp_background</string>
...
