...
        android:layout_marginTop="@dimen/content_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:transitionName="shared_background"
        >
    <com.me.cl.capstoneproject.widget.RatioImageView
        android:id="@+id/iv_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:padding="1dp"
        android:background="@drawable/border"
        android:transitionName="shared_banner"
        />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:singleLine="true"
...
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fl_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/rb_reviews"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/subText_margin"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
...
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/rb_reviews"
        app:layout_constraintStart_toEndOf="@+id/rb_reviews"
        app:layout_constraintTop_toBottomOf="@+id/rb_reviews" />

    <TextView
        android:id="@+id/tv_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textColor="#757575"
        android:textStyle="bold"
...
